front-end/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  labels:
    app: front-end
spec:
  selector:
    matchLabels:
      app: front-end
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: front-end
    spec:
      # serviceAccountName: gr18
      # imagePullSecrets:
      #   - name: ecr-credentials
      containers:
        - name: front-end
          image: trituong/frontend-service:v5 # {"$imagepolicy": "microservices:front-end-policy"}
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              cpu: "200m"
              memory: 500Mi
          ports:
            - containerPort: 5173
          command: ["/bin/sh", "-c"]
          args: ["npm run dev -- --host"]
      restartPolicy: Always
