front-end/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end
spec:
  selector:
    app: front-end
  type: ClusterIP
  ports:
    - name: front-end
      protocol: TCP
      port: 80
      targetPort: 5173
