front-end/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-end
  labels:
    name: front-end
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-ingress-class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - game-store.trituong.space
    secretName: front-end-tls
  rules:
  - host: game-store.trituong.space
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: front-end
            port:
              number: 80
